other: update UI (add transition time, colors, widths, etc.)

--- a/src/app/components/authenticated-interface/authenticated-interface.component.html
+++ b/src/app/components/authenticated-interface/authenticated-interface.component.html
@@ -1,7 +1,7 @@
 <div class="">
   <div class="row mx-1">
     <div class="col d-flex justify-content-center h-100">
-      <fa (click)="hideModal()" class="mx-2" name="home" routerLink="/home" size="2x"></fa>
+      <fa (click)="hideModal()" class="mx-2 text-orange" name="home" routerLink="/home" size="2x"></fa>
       <h5 (click)="hideModal()" class="my-auto" routerLink="/home">Home</h5>
     </div>
   </div>
