--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-4 text-right">
         <a class="text-primary" href="https://github.com/CuisinHELHa">
-          <img alt="logo" class="img-fluid mx-auto transition-125ms" id="github-icon" routerLink="" src="../../../assets/img/github-icon.png"/>
+          <img alt="logo" class="img-fluid mx-auto transition-instant" id="github-icon" routerLink="" src="../../../assets/img/github-icon.png"/>
         </a>
       </div>
     </div>
