--- a/src/app/components/pages/recipe-create/recipe-create.component.html
+++ b/src/app/components/pages/recipe-create/recipe-create.component.html
@@ -1,9 +1,4 @@
-<div class="container-fluid col-lg-12 back-img p-2 pt-3">
-
-
-  <div class="container-fluid col-lg-3">
-
-  </div>
+<div class="container-fluid col-lg-11 back-img p-2 pt-3 my-3 shadow-lg">
   <div class="container-fluid border col-lg-7 col-sm-12 text-center"
        style="background: rgba(255,255,255,0.80);backdrop-filter: blur(3px);">
     <h3 class="text-center font-weight-bold p-3">Create recipe</h3>
