--- a/src/app/components/pages/user-details/user-details.component.css
+++ b/src/app/components/pages/user-details/user-details.component.css
@@ -8,6 +8,19 @@ a {
   color: var(--main-black);
 }
 
+a:hover{
+  text-decoration: none;
+}
+
 h2 {
   margin: 5px;
 }
+
+li{
+  list-style: none;
+}
+
+li:hover{
+  padding-left:1.4em;
+}
+
