--- a/src/app/components/pages/recipe-search/recipe-search.component.html
+++ b/src/app/components/pages/recipe-search/recipe-search.component.html
@@ -1,9 +1,6 @@
-<div class="container-fluid col-lg-12 imgHome p-2 pt-4">
+<div class="container-fluid col-lg-12 p-2 pt-4" id="recipe-search-body">
   <div class="p-2 container-fluid border col-lg-7 col-sm-12 text-center"
        style="background: rgba(255,255,255,0.60);backdrop-filter: blur(3px);">
-    <div class="row">
-
-    </div>
     <div class="row px-3 pt-3">
       <div class="col text-left pl-3">
         <h4>Type of dish:</h4>
@@ -20,10 +17,12 @@
     </div>
     <div class="row">
       <div class="col">
-        <h3 class="mb-2"><b>Results for "{{searchText}}"</b></h3>
+        <h3 class="mb-2 text-orange">
+          <b>Results for "{{searchText}}"</b>
+        </h3>
         <ng-container *ngIf="filteredRecipes && filteredRecipes.length; else noFilteredRecipe">
           <ng-container *ngFor="let recipe of filteredRecipes">
-            <div class="text-left py-3 px-2 border-top recipe-search-result transition-250ms">
+            <div class="text-left py-3 px-2 border-top recipe-search-result transition-quick">
               <app-recipe-result (recipeDeleted)="deleteRecipeInDB($event)" [recipe]="recipe"></app-recipe-result>
             </div>
           </ng-container>
