--- a/src/app/components/recipe-result/recipe-result.component.html
+++ b/src/app/components/recipe-result/recipe-result.component.html
@@ -2,17 +2,21 @@
      style="backdrop-filter: blur(3px);">
   <div class="row">
     <div class="col">
-      <h4>
-        {{recipe.nameRecipe}} (<app-recipe-avg-rate [idRecipe]="recipe.idRecipe"></app-recipe-avg-rate>/ 5)
-      </h4>
-      <div class="pl-2 mb-1">
-        {{recipe.recipeType}}, {{recipe.persons}} servings ({{recipe.prepTime}} min)<br>
+      <div class="mb-1">
+        <h4 class="d-inline mr-1">
+          {{recipe.nameRecipe}} - <app-recipe-avg-rate [idRecipe]="recipe.idRecipe"></app-recipe-avg-rate>/ 5
+        </h4>
+        <small class="text-sm text-gray">
+          {{recipe.recipeType}}, {{recipe.persons}} servings ({{recipe.prepTime}} min)
+        </small>
+      </div>
+      <div class="pl-2 text-md text-gray-dark">
         "{{recipe.summary}}"
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col text-gray-dark">
       Posted on {{recipe.postDate | date}}
       <ng-container *ngIf="recipe.pseudo">
         by <b>{{recipe.pseudo}}</b>
