--- a/src/styles.css
+++ b/src/styles.css
@@ -12,25 +12,27 @@
   --main-grey: rgb(179, 179, 179);
   --light-grey: rgb(250, 250, 250);
 
-  --red: rgb(246 136 136);
+  --xs: 0.9em;
+  --sm: 1.08em;
+  --md: 1.24em;
+  --lg: 1.6em;
+  --xl: 2.1em;
+
+  --main-orange: rgb(241, 131, 65);
 
   --time-instant: 125ms;
   --time-quick: 200ms;
+  --time-regular: 325ms;
   --time-slow: 500ms;
-  --time-slower: 1000ms;
+  --time-very-slow: 1000ms;
 
   --body-height: 666px;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
   background-color: var(--light);
+  font-family: 'Lato', sans-serif;
 }
-
-.opacity-90{
-  opacity: 0.9;
-}
-
 
 .bg-dark {
   background-color: var(--main-black) !important;
@@ -44,7 +46,7 @@ body {
   background-color: var(--main-grey) !important;
 }
 
-.bg-grey {
+.bg-gray {
   background-color: var(--main-grey) !important;
 }
 
@@ -52,8 +54,43 @@ body {
   background-color: var(--light-grey) !important;
 }
 
-.bg-red{
-  background-color: var(--red) ;
+.bg-orange{
+  background-color: var(--main-orange) ;
+}
+
+
+
+.text-orange{
+  color: var(--main-orange);
+}
+
+.text-gray{
+  color: var(--gray);
+}
+
+.text-gray-dark{
+  color: var(--gray-dark);
+}
+
+
+.text-xs{
+  font-size: var(--xs);
+}
+
+.text-sm{
+  font-size: var(--sm);
+}
+
+.text-md{
+  font-size: var(--md);
+}
+
+.text-lg{
+  font-size: var(--lg);
+}
+
+.text-xl{
+  font-size: var(--xl);
 }
 
 
@@ -72,20 +109,24 @@ body {
 
 
 
-.transition-125ms {
+.transition-instant {
   transition-duration: var(--time-instant);
 }
 
-.transition-250ms {
+.transition-regular {
+  transition-duration: var(--time-regular);
+}
+
+.transition-quick {
   transition-duration: var(--time-quick);
 }
 
-.transition-500ms {
+.transition-slow {
   transition-duration: var(--time-slow);
 }
 
-.transition-1s {
-  transition-duration: var(--time-slower);
+.transition-very-slow {
+  transition-duration: var(--time-very-slow);
 }
 
 
@@ -103,6 +144,9 @@ body {
 }
 
 
+.opacity-90{
+  opacity: 0.9;
+}
 
 input:focus, textarea:focus, select:focus {
   outline: none;
